--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Meu Redirect</title>
+    <title>IPTV PROJECT</title>
 
     <meta http-equiv="refresh" content="0; URL='https://painel.netturbo.top/'"/>
 </head>
